force-app/main/default/objects/vlocity_cmt__VlocityStateModel__c/vlocity_cmt__VlocityStateModel__c.object-meta.xml
<CustomObject>
    <description>A Vlocity State Model defines a model of allowed states and transitions between those states. A Vlocity State Model may govern the statuses of a contract or quote. The State Model record identifies the object and field governed by the state model.</description>
    <label>Vlocity State Model</label>
    <nameField>
        <label>Vlocity State Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>