force-app/main/default/objects/vlocity_cmt__VlocityStateModel__c/fields/vlocity_cmt__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>