force-app/main/default/objects/vlocity_cmt__VlocityStateModel__c/fields/vlocity_cmt__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>