force-app/main/default/objects/vlocity_cmt__VlocityStateModel__c/fields/vlocity_cmt__TypeFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TypeFieldName__c</fullName>
    <label>Type Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>